--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -23,7 +23,7 @@
                             </div>
                             <div class="col-2 text-center">
                                 <p>@eventt.Price</p>
-                                <a class="btn btn-primary" asp-controller="Customer"asp-action="OrderTicket"asp-route-id="@eventt.EventID">Button</a>
+                                <button type="button" class="btn btn-primary" asp-controller="Customer"asp-action="OrderTicket"asp-route-id="@eventt.EventID">Buy Ticket</button>
                             </div>
                         </div>
                     </div>
