--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -1,34 +1,39 @@
-﻿ @{
+﻿@{
     ViewData["Title"] = "Ticket System";
     var events = ViewBag.Events;
 }
 <h2>@ViewData["Title"]</h2>
 
 @foreach (var eventt in events)
-{
-    <div class="row">
-        <div class="col-12">
-            <div class="card w-100 mt-3">
-                <div class="card-body">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-2">
-                                <img src="https://via.placeholder.com/100" alt="Alternate Text" />
-                            </div>
-                            <div class="col-8">
-                                <h5 class="card-title">@eventt.EventName</h5>
-                                <p class="mb-0">@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
-                                <p class="mb-0">@eventt.Time.Hours:@eventt.Time.Minutes</p>
-                                <p class="mb-0">@eventt.Location</p>
-                            </div>
-                            <div class="col-2 text-center">
-                                <p>@eventt.Price</p>
-                                <a href="#" class="btn btn-primary">Button</a>
+{ 
+
+    @if (@eventt.ActiveState)
+        {
+            <div class="row">
+                <div class="col-12">
+                    <div class="card w-100 mt-3">
+                        <div class="card-body">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-2">
+                                        <img src="https://via.placeholder.com/100" alt="Alternate Text" />
+                                    </div>
+                                    <div class="col-8">
+                                        <h5 class="card-title">@eventt.EventName</h5>
+                                        <p class="mb-0">@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</p>
+                                        <p class="mb-0">@eventt.Time.Hours:@eventt.Time.Minutes</p>
+                                        <p class="mb-0">@eventt.Location</p>
+                                    </div>
+                                    <div class="col-2 text-center">
+                                        <p>@eventt.Price kr.</p>
+                                        <a href="#" class="btn btn-primary">Button</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-}
+        }
+    }
+
