--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -22,7 +22,7 @@
                                 <p class="mb-0">@eventt.Location</p>
                             </div>
                             <div class="col-2 text-center">
-                                <p>@eventt.Price</p>
+                                <p>@eventt.Price,-</p>
                                 <a class="btn btn-primary" asp-controller="Customer"asp-action="OrderTicket"asp-route-id="@eventt.EventID">Button</a>
                             </div>
                         </div>
