--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -6,6 +6,8 @@
 
 @foreach (var eventt in events)
 {
+    @if (@eventt.ActiveState)
+    {
     <div class="row">
         <div class="col-12">
             <div class="card w-100 mt-3">
@@ -31,4 +33,5 @@
             </div>
         </div>
     </div>
+    }
 }
