--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -24,7 +24,7 @@
                                 <p class="mb-0">@eventt.Location</p>
                             </div>
                             <div class="col-2 text-center">
-                                <p>@eventt.Price</p>
+                                <p>@eventt.Price kr.</p>
                                 <button type="button" class="btn btn-primary" asp-controller="Customer" asp-action="OrderTicket" asp-route-id="@eventt.EventID">Buy Ticket</button>
                             </div>
                         </div>
