--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav mr-auto">
                     <li class="mr-1"><a asp-area="" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-calendar-alt"></i>Events</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Customer" asp-action="OrderTicket"><i class="glyphicon glyphicon-barcode"></i>Buy Ticket</a></li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="text" placeholder="Search">
