--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -6,7 +6,7 @@
 
 @foreach (var eventt in events)
 {
-    @if (@eventt.active_state)
+    @if (@eventt.ActiveState)
     {
     <div class="row">
         <div class="col-12">
