--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -25,7 +25,7 @@
                             </div>
                             <div class="col-2 text-center">
                                 <p>@eventt.Price kr.</p>
-                                <button type="button" class="btn btn-primary" asp-controller="Customer" asp-action="OrderTicket" asp-route-id="@eventt.EventID">Buy Ticket</button>
+                                <a class="btn btn-primary" asp-controller="Customer" asp-action="OrderTicket" asp-route-id="@eventt.EventID">Buy Ticket</a>
                             </div>
                         </div>
                     </div>
