håndtering af get-request fra login

--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -13,7 +13,7 @@
     </div>
 
     <div class="row">
-        <a href="#" class="btn btn-primary w-100 mt-2">+ Create event</a>
+        <a href="#" class="btn btn-primary w-100 mt-2"><i class="far fa-calendar-plus"></i> Create event</a>
     </div>
     <div class="card w-100 mt-3">
         <div class="card-body">
