--- a/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
+++ b/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
@@ -41,7 +41,7 @@
                 @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", @type = "password" })<br />
             </div>
 
-            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i> Save changes </button>
+            <button type="submit" class="btn btn-primary fas fa-check"> Save changes </button>
             
         </div>
     </div>
