--- a/TicketSystem/Views/Customer/LandingPage.cshtml
+++ b/TicketSystem/Views/Customer/LandingPage.cshtml
@@ -15,7 +15,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-2">
-                                <img src="https://via.placeholder.com/100" alt="Alternate Text" />
+                                <img src="/Image/@eventt.Image" class="lpimg"/>
                             </div>
                             <div class="col-8">
                                 <h5 class="card-title">@eventt.EventName</h5>
