--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4">
-                    <img src="https://via.placeholder.com/200" alt="Alternate Text" />
+                    <img src="/Image/@eventt.Image" class="otimg" />
                 </div>
                 <div class="col-8">
                     <h3 class="card-title">@eventt.EventName</h3>
