--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -47,7 +47,7 @@
             <button type="button" class="btn btn-primary">Back</button>
         </div>
         <div class="col-4">
-            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Create event</button>
+            <button type="submit" class="btn btn-primary fas fa-check"> Create event</button>
         </div>
     </div>
 }
