--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -58,7 +58,7 @@
             <button type="button" class="btn btn-primary">Back</button>
         </div>
         <div class="col-4">
-            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
+            <button type="submit" class="btn btn-primary fas fa-check"> Save changes</button>
         </div>
     </div>
 }
