--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -39,7 +39,8 @@
                         </div>
                         <div class="col-2 text-center">
                             <a href="#" class="btn btn-primary mb-2 mt-2 w-100">View event</a>
-                            <a href="#" class="btn btn-primary w-100">Edit event</a>
+                            <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
+                            
                         </div>
 
                     </div>
