--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -44,7 +44,7 @@
     </div>
     <div class="row mt-5">
         <div class="col-8">
-            <button type="button" class="btn btn-primary">Back</button>
+            <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage">Back</a>
         </div>
         <div class="col-4">
             <button type="submit" class="btn btn-primary fas fa-check"> Create event</button>
