--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -55,7 +55,7 @@
 
     <div class="row mt-5">
         <div class="col-8">
-            <button type="button" class="btn btn-primary">Back</button>
+            <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage">Back</a>
         </div>
         <div class="col-4">
             <button type="submit" class="btn btn-primary fas fa-check"> Save changes</button>
