--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -27,7 +27,7 @@ else
     </div>
 
     <div class="row">
-        <a href="#" class="btn btn-primary w-100 mt-2">+ Create event</a>
+        <a class="btn btn-primary" asp-controller="Organizer" asp-action="CreateEvent">Create Event</a>
     </div>
     <div class="card w-100 mt-3">
         <div class="card-body">
