--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     var Organizer = ViewBag.Organizer;
+    var events = ViewBag.Events;
 }
 
+@foreach (var eventt in events)
+{
 <div class="card w-100 mt-3 border-0">
     <div class="card-body pb-0">
         <div class="container-fluid">
@@ -60,3 +63,4 @@
         </div>
     </div>
 </form>
+}
