--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -34,8 +34,8 @@
                             <p class="mb-0">@eventt.Location</p>
                         </div>
                         <div class="col-4">
-                            <p class="mb-0 mt-3">32 tickets total</p>
-                            <p class="mb-0 mt-3">30 tickets sold</p>
+                            <p class="mb-0 mt-3">Tickets sold: @eventt.TicketsSold</p>
+                            <p class="mb-0 mt-3">Tickets left: @eventt.TicketsLeft</p>
                         </div>
                         <div class="col-2 text-center">
                             <a href="#" class="btn btn-primary mb-2 mt-2 w-100">View event</a>
