--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -1,5 +1,3 @@
-
-
 @{
     var Ticket = ViewBag.Ticket;
     var id = ViewBag.id;
@@ -8,71 +6,64 @@
 
 @foreach (var eventt in events)
 {
-
-
-
-<div class="card w-100 mt-3 border-0">
-    <div class="card-body pb-0">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-4">
-                    <img src="https://via.placeholder.com/200" alt="Alternate Text" />
-                </div>
-                <div class="col-8">
-                    <h3 class="card-title">@eventt.EventName</h3>
-                    <p class="mb-0">@eventt.Description</p>
-                    <hr />
-                    <ul class="eventdata">
-                        <li><b>@eventt.Location</b></li>
-                        <li>@eventt.Date</li>
-                        <li>@eventt.Time</li>
-                        <li>@eventt.Price,-</li>
-
-                    </ul>
+    <div class="card w-100 mt-3 border-0">
+        <div class="card-body pb-0">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-4">
+                        <img src="/Image/@eventt.Image" class="otimg"/>
+                    </div>
+                    <div class="col-8">
+                        <h3 class="card-title">@eventt.EventName</h3>
+                        <p class="mb-0">@eventt.Description</p>
+                        <hr />
+                        <ul class="eventdata">
+                            <li><b>@eventt.Location</b></li>
+                            <li>@eventt.Date</li>
+                            <li>@eventt.Time</li>
+                            <li>@eventt.Price,-</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <hr>
+    <h3 class="text-center mb-3">Order Ticket to @eventt.EventName</h3>
+   @using (Html.BeginForm("OrderTicket","Customer",new {EventID = eventt.EventID},FormMethod.Post))
+    {
+        <div class="col-1g-4 col-lg-offset-4">
+            <div class="form-group mb-0">
+                @Html.Label("First name *") <br />
+                @Html.TextBox("CustomerFirstname", null, new { required = true, placeholder = "First name", @class = "form-control", @type = "text" })<br />
+            </div>
+            <div class="form-group mb-0">
+                @Html.Label("Surname *") <br />
+                @Html.TextBox("CustomerSurname", null, new { required = true, placeholder = "Surname", @class = "form-control", @type = "text" })<br />
+            </div>
+            <div class="form-group mb-0">
 
-<hr>
-<h3 class="text-center mb-3">Order Ticket to @eventt.EventName</h3>
-
-
-@using (Html.BeginForm("OrderTicket","Customer",new {EventID = eventt.EventID},FormMethod.Post))
-{
-    <div class="col-1g-4 col-lg-offset-4">
-        <div class="form-group mb-0">
-            @Html.Label("First name *") <br />
-            @Html.TextBox("CustomerFirstname", null, new { required = true, placeholder = "First name", @class = "form-control", @type = "text" })<br />
+                @Html.Label("Email *") <br />
+                @Html.TextBox("CustomerEmail", null, new { required = true, placeholder = "Email", @class = "form-control", @type = "text" })<br />
+            </div>
+            <div class="form-group mb-0">
+                @Html.Label("Confirm Email *") <br />
+                @Html.TextBox("ConfirmCustomerEmail", null, new { required = true, placeholder = "Confirm Email", @class = "form-control", @type = "text" })<br />
+            </div>
+            <div class="form-group mb-0">
+                @Html.Label("Phone number *") <br />
+                @Html.TextBox("CustomerPhonenumber", null, new { required = true, placeholder = "Phone Number", @class = "form-control", @type = "number" })<br />
+            </div>
         </div>
-        <div class="form-group mb-0">
-            @Html.Label("Surname *") <br />
-            @Html.TextBox("CustomerSurname", null, new { required = true, placeholder = "Surname", @class = "form-control", @type = "text" })<br />
+        <div class="row">
+            <div class="col-8">
+                <a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage">Back</a>
+            </div>
+            <div class="col-4">
+                <a asp-controller="Ticket" asp-action="Confirmation"><button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Order Ticket</button></a>
+            </div>
         </div>
-        <div class="form-group mb-0">
-
-            @Html.Label("Email *") <br />
-            @Html.TextBox("CustomerEmail", null, new { required = true, placeholder = "Email", @class = "form-control", @type = "text" })<br />
-        </div>
-        <div class="form-group mb-0">
-            @Html.Label("Confirm Email *") <br />
-            @Html.TextBox("ConfirmCustomerEmail", null, new { required = true, placeholder = "Confirm Email", @class = "form-control", @type = "text" })<br />
-        </div>
-        <div class="form-group mb-0">
-            @Html.Label("Phone number *") <br />
-            @Html.TextBox("CustomerPhonenumber", null, new { required = true, placeholder = "Phone Number", @class = "form-control", @type = "number" })<br />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-8">
-            <button type="button" class="btn btn-primary">Back</button>
-        </div>
-        <div class="col-4">
-            <button type="submit" class="btn btn-primary" >Proceed to payment</button>
-        </div>
-    </div>
-}
+    }
 }
 
 
