--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -9,13 +9,11 @@
 
 
 <div class="row">
-
     <div class="col-12">
         <h2>@ViewData["Title"]</h2>
     </div>
-
     <div class="row">
-        <a href="#" class="btn btn-primary w-100 mt-2"><i class="far fa-calendar-plus"></i> Create event</a>
+        <a class="btn btn-primary w-100 mt-2" asp-controller="Organizer" asp-action="CreateEvent">Create Event</a>
     </div>
 
     @foreach(var eventt in events)
@@ -25,7 +23,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-2">
-                            <img src="https://via.placeholder.com/100" alt="Alternate Text" />
+                            <img src="/Image/@eventt.Image" class="lpimg"/>
                         </div>
                         <div class="col-4">
                             <h5 class="card-title">@eventt.EventName</h5>
@@ -38,15 +36,11 @@
                             <p class="mb-0 mt-3">30 tickets sold</p>
                         </div>
                         <div class="col-2 text-center">
-                            <a href="#" class="btn btn-primary mb-2 mt-2 w-100">View event</a>
+                            <a class="btn btn-primary  w-100" asp-controller="Customer" asp-action="OrderTicket" asp-route-id="@eventt.EventID">View Event</a>
                             <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
-                            
                         </div>
-
                     </div>
-
                 </div>
-
             </div>
         </div>
     }
