--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -38,9 +38,11 @@
                             <p class="mb-0 mt-3">Tickets left: @eventt.TicketsLeft</p>
                         </div>
                         <div class="col-2 text-center">
-                            <a href="#" class="btn btn-primary mb-2 mt-2 w-100">View event</a>
-                            <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
                             
+                            <a class="btn btn-primary mb-2 mt-2 w-100" asp-controller="Organizer" asp-action="OrganizerViewEvent" asp-route-id="@eventt.EventID">View Event</a>
+
+                            <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
+
                         </div>
 
                     </div>
