--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -10,8 +10,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4">
-                    <img src="https://via.placeholder.com/200" alt="Alternate Text"/>
-                    <button type="button" class="btn btn-primary w-100 mt-5">Edit event</button>
+                    <img src="https://via.placeholder.com/200" alt="Alternate Text" />
+                    <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
                 </div>
                 <div class="col-8">
                     <h3 class="card-title">Event Name</h3>
