--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -62,11 +62,11 @@
                 <a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage">Back</a>
             </div>
             <div class="col-4">
-                <a asp-controller="Ticket" asp-action="Confirmation"><button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Order Ticket</button></a>
+                <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Order Ticket</button>
             </div>
         </div>
+    }
 }
-   }
 
 
 
