--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -47,7 +47,7 @@
             <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage">Back</a>
         </div>
         <div class="col-4">
-            <button type="submit" class="btn btn-primary fas fa-check"> Create event</button>
+            <button type="submit" class="btn btn-primary" ><i class="fas fa-check"></i>Create event</button>
         </div>
     </div>
 }
