--- a/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
+++ b/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
@@ -18,31 +18,30 @@
                 @Html.Label("Contact Person name") <br />
                 @Html.TextBox("Name", null, new { required = true, placeholder = "Contact Person name", @class = "form-control" })<br />
             </div>
-
             <div class="form-group mb-0">
                 @Html.Label("Organization name") <br />
                 @Html.TextBox("OrganizationName", null, new { required = true, placeholder = "Organization Name", @class = "form-control" })<br />
             </div>
-
             <div class="form-group mb-0">
                 @Html.Label("Phonenumber") <br />
                 @Html.TextBox("Phonenumber", null, new { required = true, placeholder = "Phone number", @class = "form-control", @type = "number" })<br />
-
             </div>
-
             <div class="form-group mb-0">
                 @Html.Label("Email Address") <br />
                 @Html.TextBox("Email", null, new { required = true, placeholder = "Email Address", @class = "form-control" })<br />
-
             </div>
-
             <div class="form-group mb-0">
                 @Html.Label("Password") <br />
                 @Html.Password("Password", null, new { required = true, placeholder = "Password", @class = "form-control", @type = "password" })<br />
             </div>
-
-            <button type="submit" class="btn btn-primary fas fa-check"> Save changes </button>
-            
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col-8">
+            <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage">Back</a>
+        </div>
+        <div class="col-4">
+            <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
         </div>
     </div>
 }
