--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -37,7 +37,7 @@
                         </div>
                         <div class="col-2 text-center">
                             <a class="btn btn-primary  w-100" asp-controller="Customer" asp-action="OrderTicket" asp-route-id="@eventt.EventID">View Event</a>
-                            <a class="btn btn-primary  w-100" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
+                            <a class="btn btn-primary  w-100 mt-3" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
                         </div>
                     </div>
                 </div>
