--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -10,19 +10,19 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4">
-                    <img src="https://via.placeholder.com/200" alt="Alternate Text"/>
-                    <button type="button" class="btn btn-primary w-100 mt-5">Edit event</button>
+                    <img src="https://via.placeholder.com/200" alt="Alternate Text" />
+                    
+                    <a class="btn btn-primary w-100 mt-5" asp-controller="Organizer" asp-action="EditEvent" asp-route-id="@eventt.EventID">Edit Event</a>
                 </div>
                 <div class="col-8">
-                    <h3 class="card-title">Event Name</h3>
+                    <h3 class="card-title">@eventt.EventName</h3>
                     <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <hr/>
                     <ul class="eventdata">
-                        <li><b>Rendsburggade 10c, 3. 6, 9000 Aalborg</b></li>
-                        <li>24. December 2022</li>
-                        <li>20:00</li>
-                        <li>Standing</li>
-                        <li>1200 kr.</li>
+                        <li><b>@eventt.Location</b></li>
+                        <li>@eventt.Date.Day/@eventt.Date.Month/@eventt.Date.Year</li>
+                        <li>@eventt.Time.Hours:@eventt.Time.Minutes</li>
+                        <li>@eventt.Price</li>
                     </ul>
                 </div>
             </div>
