--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -1,9 +1,11 @@
 ﻿
 @{
     ViewData["Title"] = "EditEvent";
-    var events = ViewBag.Events;
 
+    var organizer = (Organizer)ViewBag.Organizer;
+    var events = ViewBag.Events;
 }
+
 
 <h3 id="Createevent" class="text-left">Edit Event</h3>
 @foreach (var eventt in events)
@@ -22,25 +24,25 @@
         <div class="col-md-12">
             <div class="float-right form-group col-md-6">
                 @Html.Label("Description *") <br />
-                @Html.TextArea("Description", null, new { required = true, placeholder = eventt.Description, @class = "form-control",})
+                @Html.TextArea("Description", null, new { required = true, placeholder = eventt.Description, @class = "form-control", })
             </div>
         </div>
         <div class="col-md-6">
             <div class="form-group mb-0">
                 @Html.Label("Event name *") <br />
-                @Html.TextBox("Name", null, new { required = true, placeholder = eventt.EventName, @class = "form-control"})<br />
+                @Html.TextBox("Name", null, new { required = true, placeholder = eventt.EventName, @class = "form-control" })<br />
             </div>
             <div class="form-group mb-0">
                 @Html.Label("Location *") <br />
-                @Html.TextBox("Location", null, new { required = true, placeholder = eventt.Location, @class = "form-control"})<br />
+                @Html.TextBox("Location", null, new { required = true, placeholder = eventt.Location, @class = "form-control" })<br />
             </div>
             <div class="form-group mb-0">
                 @Html.Label("Date *") <br />
-                @Html.TextBox("Date", null, new { required = true, placeholder  = eventt.Date, @class = "form-control", @type = "date" })<br />
+                @Html.TextBox("Date", null, new { required = true, placeholder = eventt.Date, @class = "form-control", @type = "date" })<br />
             </div>
             <div class="form-group mb-0">
                 @Html.Label("Start time *") <br />
-                @Html.TextBox("Time", null, new { required = true, placeholder = eventt.Time, @class = "form-control", @type = "time"})<br />
+                @Html.TextBox("Time", null, new { required = true, placeholder = eventt.Time, @class = "form-control", @type = "time" })<br />
             </div>
             <div class="form-group mb-0">
                 @Html.Label("Total amount of tickets *") <br />
