--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="EditEvent"><i class="fas fa-pen"></i>Edit Event</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="OrganizerLandingPage"><i class="fas fa-file-alt"></i>Overview</a></li>
                     <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="OrganizerViewEvent"><i class="fas fa-file-alt"></i>View</a></li>
-                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="Index"><i class="fas fa-angle-right"></i>Login</a></li>
+                    <li class="mr-1"><a asp-area="" asp-controller="Organizer" asp-action="Login"><i class="fas fa-angle-right"></i>Login</a></li>
 
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -51,7 +51,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12 text-right">
-                            <a asp-area="" asp-controller="Organizer" asp-action="Index">Organizer login</a>
+                            <a asp-area="" asp-controller="Organizer" asp-action="Login">Organizer login</a>
                         </div>
                     </div>
                 </div>
