--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["Title"] = "EditEvent";
     var events = ViewBag.Events;
+    var org = ViewBag.Organizer;
 
 }
 
@@ -58,7 +59,7 @@
 
         <div class="row mt-5">
             <div class="col-8">
-                <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage">Back</a>
+                <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@org.OrganizerID">Back</a>
             </div>
             <div class="col-4">
                 <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
