--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -59,7 +59,7 @@
 
         <div class="row mt-5">
             <div class="col-8">
-                <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@org.OrganizerID">Back</a>
+                <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID">Back</a>
             </div>
             <div class="col-4">
                 <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
