--- a/TicketSystem/Views/Organizer/CreateEvent.cshtml
+++ b/TicketSystem/Views/Organizer/CreateEvent.cshtml
@@ -45,7 +45,7 @@
     </div>
     <div class="row mt-5">
         <div class="col-8">
-            <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage">Back</a>
+            <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@orgID">Back</a>
         </div>
         <div class="col-4">
             <button type="submit" class="btn btn-primary" ><i class="fas fa-check"></i>Create event</button>
