--- a/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerViewEvent.cshtml
@@ -59,7 +59,7 @@
     </div>
     <div class="row mt-4">
         <div class="col-8">
-            <button type="button" class="btn btn-primary">Back</button>
+            <a  class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID">Back</a>
         </div>
     </div>
 </form>
