--- a/TicketSystem/Views/Organizer/EditEvent.cshtml
+++ b/TicketSystem/Views/Organizer/EditEvent.cshtml
@@ -61,7 +61,7 @@
             <div class="col-8">
                 <a class="btn btn-primary" asp-controller="Organizer" asp-action="OrganizerLandingPage" asp-route-id="@eventt.OrganizerID">Back</a>
             </div>
-            <div class="col-4">
+            <div class="col-4 text-right">
                 <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Save changes</button>
             </div>
         </div>
