--- a/TicketSystem/Views/Customer/Confirmation.cshtml
+++ b/TicketSystem/Views/Customer/Confirmation.cshtml
@@ -1,7 +1,9 @@
 ﻿
 @{
     ViewData["Title"] = "Confirmation";
+    var ticket = ViewBag.Ticket; 
 }
+
 
 <div class="col-12">
     <h1 class="text-center mt-3">Confirmation</h1>
