--- a/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
+++ b/TicketSystem/Views/Organizer/ChangeLoginInfo.cshtml
@@ -7,11 +7,12 @@
 <h2>Change login information</h2>
 
 
-    @using (Html.BeginForm())
-    {
+@using (Html.BeginForm())
+{
     <div class="row">
         <div class="col-10 mb-3 float-right">
-            <button type="button" class="btn btn-primary float-right">Delete account</button>
+            <a class="btn btn-danger float-right text-white" data-toggle="modal" data-target="#ModalWindow"> <i class="fas fa-trash-alt"></i> Delete Organizer Account</a>
+
         </div>
     </div>
     <div class="row">
@@ -44,8 +45,35 @@
             </div>
 
             <button type="submit" class="btn btn-primary fas fa-check"> Save changes </button>
-            
+
         </div>
     </div>
-    
+
+    <div class="modal" tabindex="-1" role="dialog" id="ModalWindow">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Delete Account</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete your account? Deleting the account will also cause all information connected to this account to be deleted.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <a class="btn btn-danger" asp-controller="Organizer" asp-action="DeleteOrganizer" asp-route-id="@organizer.OrganizerID">Delete</a>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
 }
