--- a/TicketSystem/Views/Organizer/CheckTickets.cshtml
+++ b/TicketSystem/Views/Organizer/CheckTickets.cshtml
@@ -3,12 +3,18 @@
     
 }
 
-<h2>CheckTickets</h2>
-
-<form class="form-inline">
-    <div class="form-group mx-sm-3 mb-2">
-        <input type="text" class="form-control" id="inputTicketID" placeholder="Ticket ID">
+<div class="row">
+    <div class="col-12  offset-4 mt-5">
+        <h2>Check Tickets</h2>
+        <br />
+        <p>Please type ticket ID to validate the ticket:</p>
+        <form class="form-inline">
+            <div class="form-group mx-sm-3 mb-2">
+                <input type="text" class="form-control" id="inputTicketID" placeholder="Ticket ID">
+            </div>
+            <button type="submit" class="btn btn-primary mb-2">Validate</button>
+        </form>
     </div>
-    <button type="submit" class="btn btn-primary mb-2">Validate</button>
-</form>
+</div>
+
 
