--- a/TicketSystem/Views/Customer/OrderTicket.cshtml
+++ b/TicketSystem/Views/Customer/OrderTicket.cshtml
@@ -59,7 +59,7 @@
             <div class="col-8">
                 <a class="btn btn-primary" asp-controller="Customer" asp-action="LandingPage">Back</a>
             </div>
-            <div class="col-4">
+            <div class="col-4 text-right">
                 <button type="submit" class="btn btn-primary"><i class="fas fa-check"></i>Order Ticket</button>
             </div>
         </div>
