--- a/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
+++ b/TicketSystem/Views/Organizer/OrganizerLandingPage.cshtml
@@ -9,7 +9,8 @@
 
 <div class="row">
     <div class="col-6">
-        <h2>@ViewData["Title"]</h2>
+        <h2>Your events</h2>
+        <a class="btn btn-primary w-40 mt-2" asp-controller="Organizer" asp-action="CreateEvent" asp-route-id="@organizer.OrganizerID"><i class="far fa-calendar-plus"></i> Create Event</a>
     </div>
     <div class="col-6 text-right">
         <div class="avatar-container d-block">
@@ -21,7 +22,7 @@
         </div>
     </div>
     <div class="row">
-        <a class="btn btn-primary w-100 mt-2" asp-controller="Organizer" asp-action="CreateEvent" asp-route-id="@organizer.OrganizerID">Create Event</a>
+
     </div>
     </div>
 
