--- a/TicketSystem/Views/Shared/_Layout.cshtml
+++ b/TicketSystem/Views/Shared/_Layout.cshtml
@@ -1,5 +1,11 @@
 ﻿
-@{var organizer = ViewBag.Organizer; }
+@{
+
+
+    var organizer = ViewBag.Organizer;
+
+
+     }
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,7 +27,28 @@
 
 </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <!--If the user is logged in-->
+        @if(organizer is null){
+             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <a class="navbar-brand"  asp-controller="Customer" asp-action="orderticket" asp-route-id="17">View event</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav mr-auto">
+                    <li class="mr-1"><a asp-area="" asp-controller="Customer" asp-action="LandingPage"><i class="fas fa-calendar-alt"></i>Events</a></li>
+
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                    <button class="btn btn-secondary my-2 my-sm-0 fas fa-search" type="submit"> Search</button>
+                </form>
+            </div>
+        </nav>
+        }
+        else if(organizer.Login == 1){
+               <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <a class="navbar-brand"  asp-controller="Customer" asp-action="orderticket" asp-route-id="17">View event</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,10 +72,16 @@
                 </form>
             </div>
         </nav>
+        }
+        else{
+
+        }
+
 
         <div class="container body-content">
             @RenderBody()
             <hr />
+
             <footer>
                 <div class="container">
                     <div class="row">
